cpp/test/Slice/errorDetection/DeclaratorMissing.err
DeclaratorMissing.ice:13 error: missing declarator
DeclaratorMissing.ice:13 error: missing declarator
DeclaratorMissing.ice:14 error: missing declarator
DeclaratorMissing.ice:14 error: missing declarator
