cpp/test/Slice/errorDetection/DeclaratorMissing.ice
// **********************************************************************
//
// Copyright (c) 2001
// MutableRealms, Inc.
// Huntsville, AL, USA
//
// All Rights Reserved
//
// **********************************************************************

interface Foo
{
    int bar(string, long l; bool, short s);
    int bar2(string s, long; bool b, short);
};
